tests/ui/wf/ice-hir-wf-check-anon-const-issue-122989.stderr
error[E0391]: cycle detected when computing predicates of `Foo`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires computing predicates of `Foo`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of `Foo`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of trait `Foo`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing type of `Foo::N`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:11
   |
LL | trait Foo<const N: Bar<2>> {
   |           ^^^^^^^^^^^^^^^
note: ...which requires determining object safety of trait `Bar`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires check whether the item has a `where Self: Sized` bound...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing predicates of `Bar`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing predicates of `Bar`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of `Bar`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of trait `Bar`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:1
   |
LL | trait Bar<const M: Foo<2>> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing type of `Bar::M`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:8:11
   |
LL | trait Bar<const M: Foo<2>> {}
   |           ^^^^^^^^^^^^^^^
note: ...which requires determining object safety of trait `Foo`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires check whether the item has a `where Self: Sized` bound...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:4:5
   |
LL |     fn func() {
   |     ^^^^^^^^^
   = note: ...which again requires computing predicates of `Foo`, completing the cycle
note: cycle used when checking that `Foo` is well-formed
  --> $DIR/ice-hir-wf-check-anon-const-issue-122989.rs:2:1
   |
LL | trait Foo<const N: Bar<2>> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
